--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,17 @@
-#rtmp {
-#       server {
-#       listen 1935;
-#       chunk_size 4096;
-#       application videotest{
-#       live on;
-#       }
-#       }
-#}
+rtmp {
+    server {
+       listen 1935;
+       chunk_size 4096;  
+       application vod {
+           play /opt/video;
+       }
+       application live{
+           live on;
+           max_connections 1024;
+       }
+   }
+}
+
 
 stream
 {
